# deploymentlab

./: .env  README.md  docker-compose.yaml
.github/workflows/: pylint.yml
app/: Dockerfile  app.py  entrypoint.dev.sh  entrypoint.sh  entrypoint_flask.sh  models.py  pyproject.toml
app/auth/: security.py  util.py  view.py  views.py
app/auth/templates/auth/: register.html  user_profile.html
app/auth/templates/auth/_partials/: email_login_message.html  register_credential.html  select_login.html  user_creation_form.html  username_form.html
app/migrations/versions/: ef2b1920cab9_create_user_and_credential_tables.py
app/templates/: base.html  index.html
