[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jonathan Balloch"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-migrate = "^4.0.5"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
webauthn = "^2.0.0"
flask-login = "^0.6.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
